@@ -6,9 +6,9 @@ import com.intellij.codeHighlighting.HighlightDisplayLevel;
 import com.intellij.codeInsight.CodeInsightSettings;
 import com.intellij.codeInsight.CodeInsightWorkspaceSettings;
 import com.intellij.codeInsight.daemon.DaemonAnalyzerTestCase;
-import com.intellij.codeInsight.daemon.DaemonCodeAnalyzer;
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzerSettings;
-import com.intellij.codeInsight.daemon.LightDaemonAnalyzerTestCase;
+import com.intellij.codeInsight.daemon.ProductionDaemonAnalyzerTestCase;
+import com.intellij.codeInsight.daemon.impl.analysis.OptimizeImportRestarter;
 import com.intellij.codeInsight.daemon.impl.quickfix.ImportClassFix;
 import com.intellij.codeInsight.daemon.impl.quickfix.ImportClassFixBase;
 import com.intellij.codeInsight.quickfix.LazyQuickFixUpdater;
@@ -20,9 +20,13 @@ import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.codeInspection.ProblemsHolder;
 import com.intellij.codeInspection.deadCode.UnusedDeclarationInspection;
 import com.intellij.codeInspection.unusedImport.UnusedImportInspection;
+import com.intellij.ide.highlighter.JavaFileType;
+import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.openapi.actionSystem.IdeActions;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ReadAction;
+import com.intellij.openapi.application.WriteAction;
+import com.intellij.openapi.application.impl.NonBlockingReadActionImpl;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.WriteCommandAction;
 import com.intellij.openapi.command.undo.UndoManager;
@@ -35,10 +39,14 @@ import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.util.PingProgress;
 import com.intellij.openapi.progress.util.ProgressIndicatorBase;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.util.Segment;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.vfs.LocalFileSystem;
+import com.intellij.openapi.vfs.VfsUtil;
+import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.CommonClassNames;
 import com.intellij.psi.JavaElementVisitor;
 import com.intellij.psi.JavaPsiFacade;
@@ -60,9 +68,10 @@ import com.intellij.psi.impl.PsiImplUtil;
 import com.intellij.psi.impl.source.codeStyle.ImportHelper;
 import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.testFramework.EditorTestUtil;
-import com.intellij.testFramework.LightProjectDescriptor;
+import com.intellij.testFramework.IdeaTestUtil;
 import com.intellij.testFramework.PlatformTestUtil;
-import com.intellij.testFramework.fixtures.LightJavaCodeInsightFixtureTestCase;
+import com.intellij.testFramework.PsiTestUtil;
+import com.intellij.testFramework.fixtures.impl.CodeInsightTestFixtureImpl;
 import com.intellij.util.ExceptionUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.ThreeState;
@@ -78,6 +87,10 @@ import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 
+import java.io.File;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -85,12 +98,11 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BooleanSupplier;
 
 @DaemonAnalyzerTestCase.CanChangeDocumentDuringHighlighting
-public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
+public class ImportHelperTest extends ProductionDaemonAnalyzerTestCase {
   @Override
   protected void setUp() throws Exception {
     super.setUp();
     JavaCodeStyleSettings.getInstance(getProject()).CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND = 100;
-    DaemonCodeAnalyzer.getInstance(getProject()).setUpdateByTimerEnabled(false);
     enableInspectionTool(new UnusedImportInspection());
     enableInspectionTool(new UnusedDeclarationInspection());
   }
@@ -102,14 +114,13 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     super.tearDown();
   }
 
-  @NotNull
   @Override
-  protected LightProjectDescriptor getProjectDescriptor() {
-    return LightJavaCodeInsightFixtureTestCase.JAVA_1_7; // Java 8 mock does not have java.sql package used here
+  protected Sdk getTestProjectJdk() {
+    return IdeaTestUtil.getMockJdk17(); // Java 8 mock does not have java.sql package used here
   }
 
   private PsiJavaFile configureByText(String text) {
-    configureFromFileText("dummy.java", text);
+    configureByText(JavaFileType.INSTANCE, text);
     assertTrue(getFile() instanceof PsiJavaFile);
     DaemonRespondToChangesTest.makeWholeEditorWindowVisible((EditorImpl)getEditor());
     UIUtil.markAsFocused(getEditor().getContentComponent(), true); // to make ShowIntentionPass call its collectInformation()
@@ -117,14 +128,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   @Override
-  protected boolean isRunInCommand() {
-    // Avoid starting inside command (as implemented in super-class)
-    // because we need to operate on application undo queue
-    return false;
-  }
-
-  @Override
-  protected void runTestRunnable(@NotNull ThrowableRunnable<Throwable> testRunnable) {
+  protected void runTestRunnable(@NotNull ThrowableRunnable<Throwable> testRunnable) throws Throwable {
     assertResolveNotCalledInEDTDuring(() -> isFromJavaCodeReferenceElementResolve(), () -> {
       try {
         super.runTestRunnable(testRunnable);
@@ -166,7 +170,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     @Language("JAVA")
     @NonNls String text = "class I {}";
     final PsiJavaFile file = configureByText(text);
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
     CommandProcessor.getInstance().executeCommand(
       getProject(), () -> WriteCommandAction.runWriteCommandAction(null, () -> {
         try {
@@ -219,7 +223,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
       /** @noinspection ALL*/ class I {{ max(0, 0); Map.class.hashCode(); min(0,0); Component.class.hashCode(); int i = CENTER; }}""";
 
     final PsiJavaFile file = configureByText(text);
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
     CommandProcessor.getInstance().executeCommand(
       getProject(), () -> ApplicationManager.getApplication().runWriteAction(() -> {
         try {
@@ -275,7 +279,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     @Language("JAVA")
     String text = "package java.util; class X{ Date d;}";
     final PsiJavaFile file = configureByText(text);
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
 
     WriteCommandAction.writeCommandAction(getProject()).run(() -> {
       JavaCodeStyleSettings settings = JavaCodeStyleSettings.getInstance(file);
@@ -288,13 +292,13 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   public void testAutoImportCaretLocation() throws ExecutionException, InterruptedException {
+    @Language("JAVA")
     String text = "class X { ArrayList<caret> c; }";
     configureByText(text);
     type(" ");
     backspace();
 
-    assertOneElement(highlightErrors());
-
+    assertOneElement(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
     int offset = getEditor().getCaretModel().getOffset();
     PsiReference ref = getFile().findReferenceAt(offset - 1);
     assertTrue(ref instanceof PsiJavaCodeReferenceElement);
@@ -310,10 +314,11 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     assertEquals(ImportClassFixBase.Result.CLASS_AUTO_IMPORTED, result);
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
   }
   public void testAutoImportCaretLocationNotImportIfResolved() throws ExecutionException, InterruptedException {
 
+    @Language("JAVA")
     String text = """
       package org.example;
       
@@ -393,12 +398,13 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   public void testAutoImportCaretLocation2() throws ExecutionException, InterruptedException {
+    @Language("JAVA")
     String text = "class X { <caret>ArrayList c = null; }";
     configureByText(text);
     type(" ");
     backspace();
 
-    assertSize(1, highlightErrors());
+    assertSize(1, myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
     int offset = getEditor().getCaretModel().getOffset();
@@ -409,14 +415,15 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     assertEquals(ImportClassFixBase.Result.CLASS_AUTO_IMPORTED, result);
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
   }
 
   public void testAutoImportWorksWhenITypeSpaceAfterClassName() throws Exception {
+    @Language("JAVA")
     @NonNls String text = "class S { ArrayList<caret> }";
     configureByText(text);
 
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     //caret is too close
     assertNoImportsAdded();
 
@@ -443,7 +450,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     SHOWN.set(false);
     configureByText(text);
     type(" xxx"); // make undoable to enable showing autoimports
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertTrue(SHOWN.get());
   }
   public void testAutoImportHintIsNotShownAfterEscapePressed() {
@@ -458,15 +465,16 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     SHOWN.set(false);
     configureByText(text);
     type(" xxx"); // make undoable to enable showing autoimports
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertTrue(SHOWN.get());
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
     getEditor().getSelectionModel().setSelection(0,null, 1); // to enable escape
     escape();
     SHOWN.set(false);
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertFalse(SHOWN.get());
   }
+
   private static final AtomicBoolean SHOWN = new AtomicBoolean();
   private static class MyHintInspection extends LocalInspectionTool {
     @Nls
@@ -535,7 +543,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
 
-  public void testAutoImportAfterUncomment() {
+  public void testAutoImportAfterUncomment() throws ExecutionException, InterruptedException {
     assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("java.util.ArrayList", GlobalSearchScope.allScope(getProject())));
     @Language("JAVA")
     @NonNls String text = "class S { /*ArrayList l; HashMap h; <caret>*/ }";
@@ -544,18 +552,34 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     CodeInsightSettings.getInstance().ADD_UNAMBIGIOUS_IMPORTS_ON_THE_FLY = true;
     DaemonCodeAnalyzerSettings.getInstance().setImportHintEnabled(true);
 
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
 
     assertNoImportsAdded();
 
     EditorTestUtil.executeAction(getEditor(), IdeActions.ACTION_COMMENT_BLOCK);
 
-    doHighlighting();
-    PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
-
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
+    waitForAutoOptimizeImports();
 
     assertSize(2, ((PsiJavaFile)getFile()).getImportList().getAllImportStatements());
+  }
+
+  @NotNull
+  private Editor createSaveAndOpenFile(@NotNull String relativePath, @NotNull String fileText) throws IOException {
+    File tempFile = new File(createTempDirectory(), relativePath);
+    tempFile.getParentFile().mkdirs();
+    tempFile.createNewFile();
+    VirtualFile vFile = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(tempFile);
+    assert vFile != null;
+    WriteAction.runAndWait(() -> {
+      vFile.setCharset(StandardCharsets.UTF_8);
+      VfsUtil.saveText(vFile, fileText);
+    });
+
+    PsiTestUtil.addSourceRoot(myModule, vFile.getParent());
+
+    configureByExistingFile(vFile);
+    return getEditor();
   }
 
   public void testUnresolvedReferenceQuickFixMustReappearAfterTheClassUnderQuestionIsCreated() throws Exception {
@@ -568,6 +592,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
       public class OtherClass {
        //
       }""";
+
     Editor otherEditor = createSaveAndOpenFile("x/OtherClass.java", otherText);
     @Language("JAVA")
     @NonNls String text = """
@@ -579,7 +604,9 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     JavaCodeStyleSettings javaCodeStyleSettings = CodeStyle.getSettings(getFile()).getCustomSettings(JavaCodeStyleSettings.class);
     javaCodeStyleSettings.INSERT_INNER_CLASS_IMPORTS = true;
 
-    HighlightInfo error = assertOneElement(highlightErrors());
+    HighlightInfo error = assertOneElement(
+      (Collection<? extends HighlightInfo>)myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(),
+                                                                                                         HighlightSeverity.ERROR));
     assertEquals("Cannot resolve symbol 'SomeOtherMethodClass12'", error.getDescription());
 
     assertNoImportsAdded();
@@ -593,15 +620,15 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     }
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
     assertNotNull(PsiDocumentManager.getInstance(getProject()).getPsiFile(otherEditor.getDocument()));
-    doHighlighting();
-    PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
-    assertEmpty(highlightErrors());
+    assertEmpty(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
+    waitForAutoOptimizeImports();
     assertOneImportAdded("x.OtherClass.SomeOtherMethodClass12");
     assertSize(1, ((PsiJavaFile)getFile()).getImportList().getAllImportStatements());
   }
 
   public void testEnsureOptimizeImportsWhenInspectionReportsErrors() throws Exception {
+    @Language("JAVA")
     @NonNls String text = "import java.util.List; class S { } <caret>";
     configureByText(text);
     //ensure error will be provided by a local inspection
@@ -611,26 +638,26 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
 
     CodeInsightWorkspaceSettings.getInstance(getProject()).setOptimizeImportsOnTheFly(true, getTestRootDisposable());
 
-    List<HighlightInfo> errs = highlightErrors();
     //error corresponding to too short class name
-    assertSize(1, errs);
+    assertOneElement(myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
 
     assertOneImportAdded("java.util.List");
 
     type("/* */");
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
     assertNoImportsAdded();
   }
 
   public void testAutoImportWorks() {
+    @Language("JAVA")
     @NonNls final String text = "class S { JFrame x; <caret> }";
     configureByText(text);
     boolean isInContent = true;
     assertFalse(DaemonListeners.canChangeFileSilently(getFile(), isInContent, ThreeState.UNSURE));
 
 
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertFalse(DaemonListeners.canChangeFileSilently(getFile(), isInContent, ThreeState.UNSURE));
 
     type(" ");
@@ -643,6 +670,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
 
 
   public void testAutoImportOfGenericReference() throws Exception {
+    @Language("JAVA")
     @NonNls final String text = "class S {{ new ArrayList<caret><String> }}";
     configureByText(text);
     EditorTestUtil.setEditorVisibleSize(getEditor(), 1000, 1000); // make sure editor is visible - auto-import works only for visible area
@@ -652,35 +680,40 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     type(" ");
     backspace();
 
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     //caret is too close
     assertNoImportsAdded();
 
     caretRight();
 
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
 
     assertOneImportAdded("java.util.ArrayList");
   }
 
   private void assertOneImportAdded(String s) throws Exception {
+    waitForAutoOptimizeImports();
     PsiImportStatementBase importStatement = assertOneElement(((PsiJavaFile)getFile()).getImportList().getAllImportStatements());
     PsiElement resolved = ApplicationManager.getApplication().executeOnPooledThread(() -> ReadAction.compute(() -> importStatement.resolve())).get();
     assertTrue(resolved instanceof PsiClass);
     assertEquals(s, ((PsiClass)resolved).getQualifiedName());
   }
-  private void assertNoImportsAdded() {
+  private void assertNoImportsAdded() throws ExecutionException, InterruptedException {
+    waitForAutoOptimizeImports();
     assertEmpty(((PsiJavaFile)getFile()).getImportList().getAllImportStatements());
   }
 
-  public void testAutoOptimizeUnresolvedImports() {
+  public void testAutoOptimizeUnresolvedImports() throws ExecutionException, InterruptedException {
+    @Language("JAVA")
     @NonNls String text = "import xxx.yyy; class S { } <caret> ";
     configureByText(text);
 
     CodeInsightWorkspaceSettings.getInstance(getProject()).setOptimizeImportsOnTheFly(true, getTestRootDisposable());
     DaemonCodeAnalyzerSettings.getInstance().setImportHintEnabled(true);
 
-    List<HighlightInfo> errs = highlightErrors();
+    List<HighlightInfo> errs =
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
+    waitForAutoOptimizeImports();
 
     //error in import list
     assertSize(1, errs);
@@ -688,10 +721,22 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     assertSize(1, ((PsiJavaFile)getFile()).getImportList().getAllImportStatements());
 
     type("/* */");
-    doHighlighting();
-    PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
 
     assertNoImportsAdded();
+  }
+
+  private void waitForAutoOptimizeImports() throws InterruptedException, ExecutionException {
+    PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
+    TestDaemonCodeAnalyzerImpl.waitWhilePumping(ApplicationManager.getApplication().executeOnPooledThread(() -> {
+      try {
+        OptimizeImportRestarter.getInstance(getProject()).waitForScheduledOptimizeImportRequestsInTests();
+      }
+      catch (ExecutionException | InterruptedException e) {
+        throw new RuntimeException(e);
+      }
+    }));
+    PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
   }
 
   public void testUnambiguousImportMustBeInsertedEvenWhenShowImportPopupIsOff() throws Exception {
@@ -708,7 +753,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
       configureByText(text);
       type(" ");
       backspace();
-      highlightErrors();
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
       PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
       assertOneImportAdded("java.util.ArrayList");
@@ -719,6 +764,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   public void testAutoOptimizeDoesntSuddenlyRemoveImportsDuringTyping() throws Exception {
+    @Language("JAVA")
     @NonNls String text = "package x; " +
                           "import java.util.ArrayList; " +
                           "class S {{ <caret> ArrayList l;\n" +
@@ -727,43 +773,47 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
 
     CodeInsightWorkspaceSettings.getInstance(getProject()).setOptimizeImportsOnTheFly(true, getTestRootDisposable());
 
-    List<HighlightInfo> errs = highlightErrors();
+    List<HighlightInfo> errs =
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
 
     assertEmpty(errs);
 
     type("/* ");
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
-    errs = highlightErrors();
+    errs = myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertNotEmpty(errs);
     assertOneImportAdded("java.util.ArrayList");
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
     type(" */ ");
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
-    errs = highlightErrors();
+    errs = myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertEmpty(errs);
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
 
     assertOneImportAdded("java.util.ArrayList");
   }
 
-  public void testAutoInsertImportForInnerClass() {
+  public void testAutoInsertImportForInnerClass() throws ExecutionException, InterruptedException {
+    @Language("JAVA")
     @NonNls String text = "package x; class S { void f(ReadLock r){} } <caret> ";
     configureByText(text);
 
     CodeInsightSettings.getInstance().ADD_UNAMBIGIOUS_IMPORTS_ON_THE_FLY = true;
 
-    List<HighlightInfo> errs = highlightErrors();
+    List<HighlightInfo> errs =
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertSize(1, errs);
 
     assertNoImportsAdded();
     type("/* */");
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     PlatformTestUtil.dispatchAllInvocationEventsInIdeEventQueue();
     assertNoImportsAdded();
   }
 
   public void testAutoInsertImportForInnerClassAllowInnerClassImports() throws Exception {
+    @Language("JAVA")
     @NonNls String text = "package x; class S { void f(ReadLock r){} } <caret> ";
     configureByText(text);
 
@@ -773,19 +823,21 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     DaemonCodeAnalyzerSettings.getInstance().setImportHintEnabled(true);
 
     type(" ");
-    highlightErrors();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
 
     assertOneImportAdded("java.util.concurrent.locks.ReentrantReadWriteLock.ReadLock");
   }
 
   public void testAutoImportSkipsClassReferenceInMethodPosition() throws Exception {
+    @Language("JAVA")
     @NonNls String text =
       "package x; import java.util.HashMap; class S { HashMap<String,String> f(){ return  Hash<caret>Map <String, String >();} }  ";
     configureByText(text);
 
     CodeInsightSettings.getInstance().ADD_UNAMBIGIOUS_IMPORTS_ON_THE_FLY = true;
 
-    List<HighlightInfo> errs = highlightErrors();
+    List<HighlightInfo> errs =
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertTrue(errs.size() > 1);
 
     PsiJavaFile javaFile = (PsiJavaFile)getFile();
@@ -797,13 +849,14 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   public void testAutoImportDoNotBreakCode() {
+    @Language("JAVA")
     @NonNls String text = "package x; class S {{ S.<caret>\n Runnable r; }}";
     configureByText(text);
 
     CodeInsightSettings.getInstance().ADD_UNAMBIGIOUS_IMPORTS_ON_THE_FLY = true;
     CodeInsightWorkspaceSettings.getInstance(getProject()).setOptimizeImportsOnTheFly(true, getTestRootDisposable());
 
-    assertSize(1, highlightErrors());
+    assertSize(1, myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR));
   }
 
   public void testAutoImportIgnoresUnresolvedImportReferences() throws ExecutionException, InterruptedException {
@@ -842,6 +895,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   public void testAutoImportMustNotRunResolveInEDT() throws Exception {
+    @Language("JAVA")
     @NonNls final String text = "class S {{ new ArrayList<<caret>String> }}";
     configureByText(text);
     type(" ");
@@ -852,7 +906,7 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     DaemonCodeAnalyzerSettings.getInstance().setImportHintEnabled(true);
 
     ThreadingAssertions.assertEventDispatchThread();
-    doHighlighting();
+    myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR);
     assertOneImportAdded("java.util.ArrayList");
   }
 
@@ -882,14 +936,15 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
     TextRange visibleRange = editor.calculateVisibleRange();
     assertTrue(visibleRange.toString(), visibleRange.getStartOffset() > 5000 && visibleRange.getEndOffset() < 10_000); // sanity check that visible range has been indeed changed
 
-    List<HighlightInfo> errors = ContainerUtil.sorted(highlightErrors(), Segment.BY_START_OFFSET_THEN_END_OFFSET);
+    List<HighlightInfo> errors = ContainerUtil.sorted(
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR), Segment.BY_START_OFFSET_THEN_END_OFFSET);
     assertSize(1000, errors);
     LazyQuickFixUpdaterImpl updater = (LazyQuickFixUpdaterImpl)LazyQuickFixUpdater.getInstance(getProject());
     long deadline = System.currentTimeMillis() + 60_000;
     for (int i = 0; i < errors.size(); i++) {
       HighlightInfo error = errors.get(i);
       if (visibleRange.contains(error)) { // we care only for visible errors; invisible ones may or may not be computed
-        updater.waitForBackgroundJobIfStartedInTests(getFile(), editor, error, deadline - System.currentTimeMillis(), TimeUnit.MILLISECONDS);
+        updater.waitForBackgroundJobIfStartedInTests(getProject(), editor.getDocument(), error, deadline - System.currentTimeMillis(), TimeUnit.MILLISECONDS);
         if (!error.hasHint()) {
           List<HintAction> hints = ShowAutoImportPass.extractHints(error);
           String message = error + ": " + i + " hasHints: "+error.hasHint() + "; hints:" + hints + "; visibleRange:" + visibleRange + "; contains: " + visibleRange.contains(error);
@@ -928,9 +983,16 @@ public class ImportHelperTest extends LightDaemonAnalyzerTestCase {
   }
 
   private void assertHasImportHintAllOverUnresolvedReference(String message) throws Exception {
-    List<HighlightInfo> errors = ContainerUtil.sorted(highlightErrors(), Segment.BY_START_OFFSET_THEN_END_OFFSET);
+    List<HighlightInfo> errors = ContainerUtil.sorted(
+      myTestDaemonCodeAnalyzer.waitHighlightingSurviveCancellations(getEditor().getDocument(), HighlightSeverity.ERROR), Segment.BY_START_OFFSET_THEN_END_OFFSET);
+    IdentifierHighlighterPassFactory.waitForIdentifierHighlighting(getEditor());
+    CodeInsightTestFixtureImpl.waitForLazyQuickFixesUnderCaret(getProject(), getEditor());
+    NonBlockingReadActionImpl.waitForAsyncTaskCompletion();//auto-imports use non-blocking read actions to compute imports
+    NonBlockingReadActionImpl.waitForAsyncTaskCompletion();
+    UIUtil.dispatchAllInvocationEvents();
+
     assertNotEmpty(errors);
-    HighlightInfo error = errors.get(0);
+    HighlightInfo error = errors.getFirst();
     assertEquals(message, "Cannot resolve symbol 'ArrayList'", error.getDescription());
     assertTrue(message, error.hasHint());
     HighlightInfo.IntentionActionDescriptor errDesc = error.findRegisteredQuickFix((descriptor, range) -> descriptor.getAction().getText().startsWith("Import class") ? descriptor : null);
