@@ -14,11 +14,15 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Stream;
 
 public class ClassFinder {
-  private static final List<String> IGNORED_CLASS_NAMES = Arrays.asList("com.intellij.tests.BootstrapTests", "com.intellij.AllTests");
+  private static final List<String> IGNORED_CLASS_NAMES = List.of("com.intellij.AllTests");
   private final List<String> classNameList;
   private final Path classPathRoot;
   private final boolean includeUnconventionallyNamedTests;
